# apps/api/src/admin/admin.dto.ts
@@ -9,3 +9,13 @@ export class UpdateAccountStatusDto {
   @ApiProperty({ enum: ["ACTIVE", "SUSPENDED", "DEACTIVATED"] })
   status!: string;
 }
+
+export class UpdatePlatformSettingsDto {
+  @ApiProperty({ enum: ["MYR", "SGD", "USD"] })
+  currency!: string;
+
+  @ApiProperty({
+    enum: ["Asia/Kuala_Lumpur", "Asia/Singapore", "UTC"],
+  })
+  timezone!: string;
+}
